Fix too small left menu

--- a/content/style.scss
+++ b/content/style.scss
@@ -12,7 +12,7 @@ $menu-item-line-height: 20px;
 $menu-item-padding: 10px;
 $menu-item-border: 1px;
 $menu-item-margin: 4px;
-$menu-item-full-height: $menu-item-line-height +2*$menu-item-padding +2*$menu-item-border + $menu-item-margin;
+$menu-item-full-height: 2*$menu-item-line-height +2*$menu-item-padding +2*$menu-item-border + $menu-item-margin;
 $menu-padding: 8px;
 $vertical-margin: 20px;
 
